src/parser/grammar/DIELParser.ts
// Generated from src/parser/grammar/DIEL.g4 by ANTLR 4.6-SNAPSHOT


import { ATN } from 'antlr4ts/atn/ATN';
import { ATNDeserializer } from 'antlr4ts/atn/ATNDeserializer';
import { FailedPredicateException } from 'antlr4ts/FailedPredicateException';
import { NotNull } from 'antlr4ts/Decorators';
import { NoViableAltException } from 'antlr4ts/NoViableAltException';
import { Override } from 'antlr4ts/Decorators';
import { Parser } from 'antlr4ts/Parser';
import { ParserRuleContext } from 'antlr4ts/ParserRuleContext';
import { ParserATNSimulator } from 'antlr4ts/atn/ParserATNSimulator';
import { ParseTreeListener } from 'antlr4ts/tree/ParseTreeListener';
import { ParseTreeVisitor } from 'antlr4ts/tree/ParseTreeVisitor';
import { RecognitionException } from 'antlr4ts/RecognitionException';
import { RuleContext } from 'antlr4ts/RuleContext';
import { RuleVersion } from 'antlr4ts/RuleVersion';
import { TerminalNode } from 'antlr4ts/tree/TerminalNode';
import { Token } from 'antlr4ts/Token';
import { TokenStream } from 'antlr4ts/TokenStream';
import { Vocabulary } from 'antlr4ts/Vocabulary';
import { VocabularyImpl } from 'antlr4ts/VocabularyImpl';

import * as Utils from 'antlr4ts/misc/Utils';

import { DIELVisitor } from './DIELVisitor';


export class DIELParser extends Parser {
	public static readonly T__0=1;
	public static readonly T__1=2;
	public static readonly T__2=3;
	public static readonly T__3=4;
	public static readonly T__4=5;
	public static readonly T__5=6;
	public static readonly T__6=7;
	public static readonly T__7=8;
	public static readonly T__8=9;
	public static readonly T__9=10;
	public static readonly T__10=11;
	public static readonly T__11=12;
	public static readonly BOOLEANVAL=13;
	public static readonly EVENT=14;
	public static readonly CROSSFILTER=15;
	public static readonly PREDICATE=16;
	public static readonly CONSTRAIN=17;
	public static readonly TEMPLATE=18;
	public static readonly USE=19;
	public static readonly XCHART=20;
	public static readonly NAME=21;
	public static readonly PUBLIC=22;
	public static readonly SINGLE=23;
	public static readonly LINE=24;
	public static readonly DYNAMIC=25;
	public static readonly REGISTER=26;
	public static readonly TYPE=27;
	public static readonly UDF=28;
	public static readonly CREATE=29;
	public static readonly DEFAULT=30;
	public static readonly EXCEPT=31;
	public static readonly ALL=32;
	public static readonly DROP=33;
	public static readonly CHECK=34;
	public static readonly UNIQUE=35;
	public static readonly PRIMARY=36;
	public static readonly FOREIGN=37;
	public static readonly REFERENCES=38;
	public static readonly KEY=39;
	public static readonly TABLE=40;
	public static readonly VIEW=41;
	public static readonly BOOLEAN=42;
	public static readonly OUTPUT=43;
	public static readonly PROGRAM=44;
	public static readonly AFTER=45;
	public static readonly BEGIN=46;
	public static readonly END=47;
	public static readonly WITH=48;
	public static readonly INSERT=49;
	public static readonly INTO=50;
	public static readonly VALUES=51;
	public static readonly AS=52;
	public static readonly SELECT=53;
	public static readonly FROM=54;
	public static readonly JOIN=55;
	public static readonly ON=56;
	public static readonly WHERE=57;
	public static readonly LIMIT=58;
	public static readonly EXIST=59;
	public static readonly GROUP=60;
	public static readonly BY=61;
	public static readonly HAVING=62;
	public static readonly AND=63;
	public static readonly OR=64;
	public static readonly IN=65;
	public static readonly INTERSECT=66;
	public static readonly UNION=67;
	public static readonly LEFT=68;
	public static readonly OUTER=69;
	public static readonly CASE=70;
	public static readonly WHEN=71;
	public static readonly THEN=72;
	public static readonly ELSE=73;
	public static readonly IS=74;
	public static readonly NULL=75;
	public static readonly NOT=76;
	public static readonly ORDER=77;
	public static readonly ASC=78;
	public static readonly DESC=79;
	public static readonly AUTOINCREMENT=80;
	public static readonly DATETIME=81;
	public static readonly DISTINCT=82;
	public static readonly TRUE=83;
	public static readonly FALSE=84;
	public static readonly CACHED=85;
	public static readonly DELETE=86;
	public static readonly INT=87;
	public static readonly TEXT=88;
	public static readonly LATEST=89;
	public static readonly MINUS=90;
	public static readonly DELIM=91;
	public static readonly STAR=92;
	public static readonly COMMA=93;
	public static readonly PIPE=94;
	public static readonly SIMPLE_COMMENT=95;
	public static readonly NUMBER=96;
	public static readonly STRING=97;
	public static readonly IDENTIFIER=98;
	public static readonly WS=99;
	public static readonly RULE_queries = 0;
	public static readonly RULE_registerTypeUdf = 1;
	public static readonly RULE_templateStmt = 2;
	public static readonly RULE_crossfilterStmt = 3;
	public static readonly RULE_crossfilterChartStmt = 4;
	public static readonly RULE_dataType = 5;
	public static readonly RULE_columnDefinition = 6;
	public static readonly RULE_constraintDefinition = 7;
	public static readonly RULE_originalTableStmt = 8;
	public static readonly RULE_relationDefintion = 9;
	public static readonly RULE_constraintClause = 10;
	public static readonly RULE_columnConstraints = 11;
	public static readonly RULE_viewStmt = 12;
	public static readonly RULE_programStmt = 13;
	public static readonly RULE_programBody = 14;
	public static readonly RULE_aProgram = 15;
	public static readonly RULE_selectQuery = 16;
	public static readonly RULE_templateQuery = 17;
	public static readonly RULE_dropQuery = 18;
	public static readonly RULE_deleteStmt = 19;
	public static readonly RULE_variableAssignment = 20;
	public static readonly RULE_compositeSelect = 21;
	public static readonly RULE_setOp = 22;
	public static readonly RULE_selectUnitQuery = 23;
	public static readonly RULE_whereClause = 24;
	public static readonly RULE_groupByClause = 25;
	public static readonly RULE_havingClause = 26;
	public static readonly RULE_orderByClause = 27;
	public static readonly RULE_orderSpec = 28;
	public static readonly RULE_insertQuery = 29;
	public static readonly RULE_insertBody = 30;
	public static readonly RULE_joinClause = 31;
	public static readonly RULE_limitClause = 32;
	public static readonly RULE_relationReference = 33;
	public static readonly RULE_expr = 34;
	public static readonly RULE_unitExpr = 35;
	public static readonly RULE_selectColumnClause = 36;
	public static readonly RULE_value = 37;
	public static readonly RULE_mathOp = 38;
	public static readonly RULE_compareOp = 39;
	public static readonly RULE_logicOp = 40;
	public static readonly ruleNames: string[] = [
		"queries", "registerTypeUdf", "templateStmt", "crossfilterStmt", "crossfilterChartStmt", 
		"dataType", "columnDefinition", "constraintDefinition", "originalTableStmt", 
		"relationDefintion", "constraintClause", "columnConstraints", "viewStmt", 
		"programStmt", "programBody", "aProgram", "selectQuery", "templateQuery", 
		"dropQuery", "deleteStmt", "variableAssignment", "compositeSelect", "setOp", 
		"selectUnitQuery", "whereClause", "groupByClause", "havingClause", "orderByClause", 
		"orderSpec", "insertQuery", "insertBody", "joinClause", "limitClause", 
		"relationReference", "expr", "unitExpr", "selectColumnClause", "value", 
		"mathOp", "compareOp", "logicOp"
	];

	private static readonly _LITERAL_NAMES: (string | undefined)[] = [
		undefined, "'('", "')'", "'='", "'.'", "'/'", "'%'", "'+'", "'!='", "'>='", 
		"'>'", "'<='", "'<'", undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, "'-'", "';'", "'*'", "','", "'||'"
	];
	private static readonly _SYMBOLIC_NAMES: (string | undefined)[] = [
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, "BOOLEANVAL", 
		"EVENT", "CROSSFILTER", "PREDICATE", "CONSTRAIN", "TEMPLATE", "USE", "XCHART", 
		"NAME", "PUBLIC", "SINGLE", "LINE", "DYNAMIC", "REGISTER", "TYPE", "UDF", 
		"CREATE", "DEFAULT", "EXCEPT", "ALL", "DROP", "CHECK", "UNIQUE", "PRIMARY", 
		"FOREIGN", "REFERENCES", "KEY", "TABLE", "VIEW", "BOOLEAN", "OUTPUT", 
		"PROGRAM", "AFTER", "BEGIN", "END", "WITH", "INSERT", "INTO", "VALUES", 
		"AS", "SELECT", "FROM", "JOIN", "ON", "WHERE", "LIMIT", "EXIST", "GROUP", 
		"BY", "HAVING", "AND", "OR", "IN", "INTERSECT", "UNION", "LEFT", "OUTER", 
		"CASE", "WHEN", "THEN", "ELSE", "IS", "NULL", "NOT", "ORDER", "ASC", "DESC", 
		"AUTOINCREMENT", "DATETIME", "DISTINCT", "TRUE", "FALSE", "CACHED", "DELETE", 
		"INT", "TEXT", "LATEST", "MINUS", "DELIM", "STAR", "COMMA", "PIPE", "SIMPLE_COMMENT", 
		"NUMBER", "STRING", "IDENTIFIER", "WS"
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(DIELParser._LITERAL_NAMES, DIELParser._SYMBOLIC_NAMES, []);

	@Override
	@NotNull
	public get vocabulary(): Vocabulary {
		return DIELParser.VOCABULARY;
	}

	@Override
	public get grammarFileName(): string { return "DIEL.g4"; }

	@Override
	public get ruleNames(): string[] { return DIELParser.ruleNames; }

	@Override
	public get serializedATN(): string { return DIELParser._serializedATN; }

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(DIELParser._ATN, this);
	}
	@RuleVersion(0)
	public queries(): QueriesContext {
		let _localctx: QueriesContext = new QueriesContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, DIELParser.RULE_queries);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 91; 
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				this.state = 91;
				this._errHandler.sync(this);
				switch ( this.interpreter.adaptivePredict(this._input,0,this._ctx) ) {
				case 1:
					{
					this.state = 82;
					this.viewStmt();
					}
					break;

				case 2:
					{
					this.state = 83;
					this.programStmt();
					}
					break;

				case 3:
					{
					this.state = 84;
					this.crossfilterStmt();
					}
					break;

				case 4:
					{
					this.state = 85;
					this.templateStmt();
					}
					break;

				case 5:
					{
					this.state = 86;
					this.insertQuery();
					}
					break;

				case 6:
					{
					this.state = 87;
					this.originalTableStmt();
					}
					break;

				case 7:
					{
					this.state = 88;
					this.registerTypeUdf();
					}
					break;

				case 8:
					{
					this.state = 89;
					this.dropQuery();
					}
					break;

				case 9:
					{
					this.state = 90;
					this.deleteStmt();
					}
					break;
				}
				}
				this.state = 93; 
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while ( ((((_la - 26)) & ~0x1F) === 0 && ((1 << (_la - 26)) & ((1 << (DIELParser.REGISTER - 26)) | (1 << (DIELParser.CREATE - 26)) | (1 << (DIELParser.DROP - 26)) | (1 << (DIELParser.INSERT - 26)))) !== 0) || _la===DIELParser.DELETE );
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	@RuleVersion(0)
	public registerTypeUdf(): RegisterTypeUdfContext {
		let _localctx: RegisterTypeUdfContext = new RegisterTypeUdfContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, DIELParser.RULE_registerTypeUdf);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 95;
			this.match(DIELParser.REGISTER);
			this.state = 96;
			this.match(DIELParser.UDF);
			this.state = 97;
			this.match(DIELParser.IDENTIFIER);
			this.state = 98;
			this.match(DIELParser.TYPE);
			this.state = 99;
			this.dataType();
			this.state = 100;
			this.match(DIELParser.DELIM);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	@RuleVersion(0)
	public templateStmt(): TemplateStmtContext {
		let _localctx: TemplateStmtContext = new TemplateStmtContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, DIELParser.RULE_templateStmt);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 102;
			this.match(DIELParser.CREATE);
			this.state = 103;
			this.match(DIELParser.TEMPLATE);
			this.state = 104;
			_localctx._templateName = this.match(DIELParser.IDENTIFIER);
			this.state = 105;
			this.match(DIELParser.T__0);
			this.state = 106;
			this.match(DIELParser.IDENTIFIER);
			this.state = 111;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===DIELParser.COMMA) {
				{
				{
				this.state = 107;
				this.match(DIELParser.COMMA);
				this.state = 108;
				this.match(DIELParser.IDENTIFIER);
				}
				}
				this.state = 113;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 114;
			this.match(DIELParser.T__1);
			this.state = 117;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input,3,this._ctx) ) {
			case 1:
				{
				this.state = 115;
				this.selectQuery();
				}
				break;

			case 2:
				{
				this.state = 116;
				this.joinClause();
				}
				break;
			}
			this.state = 119;
			this.match(DIELParser.DELIM);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	@RuleVersion(0)
	public crossfilterStmt(): CrossfilterStmtContext {
		let _localctx: CrossfilterStmtContext = new CrossfilterStmtContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, DIELParser.RULE_crossfilterStmt);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 121;
			this.match(DIELParser.CREATE);
			this.state = 122;
			this.match(DIELParser.CROSSFILTER);
			this.state = 123;
			_localctx._crossfilterName = this.match(DIELParser.IDENTIFIER);
			this.state = 124;
			this.match(DIELParser.ON);
			this.state = 125;
			_localctx._relation = this.match(DIELParser.IDENTIFIER);
			this.state = 126;
			this.match(DIELParser.BEGIN);
			this.state = 128; 
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				{
				this.state = 127;
				this.crossfilterChartStmt();
				}
				}
				this.state = 130; 
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while ( _la===DIELParser.CREATE );
			this.state = 132;
			this.match(DIELParser.END);
			this.state = 133;
			this.match(DIELParser.DELIM);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	@RuleVersion(0)
	public crossfilterChartStmt(): CrossfilterChartStmtContext {
		let _localctx: CrossfilterChartStmtContext = new CrossfilterChartStmtContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, DIELParser.RULE_crossfilterChartStmt);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 135;
			this.match(DIELParser.CREATE);
			this.state = 136;
			this.match(DIELParser.XCHART);
			this.state = 137;
			_localctx._chart = this.match(DIELParser.IDENTIFIER);
			this.state = 138;
			this.match(DIELParser.AS);
			this.state = 139;
			_localctx._definitionQuery = this.selectQuery();
			this.state = 140;
			this.match(DIELParser.WITH);
			this.state = 141;
			this.match(DIELParser.PREDICATE);
			this.state = 142;
			_localctx._predicateClause = this.joinClause();
			this.state = 143;
			this.match(DIELParser.DELIM);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	@RuleVersion(0)
	public dataType(): DataTypeContext {
		let _localctx: DataTypeContext = new DataTypeContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, DIELParser.RULE_dataType);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 145;
			_la = this._input.LA(1);
			if ( !(_la===DIELParser.BOOLEAN || ((((_la - 81)) & ~0x1F) === 0 && ((1 << (_la - 81)) & ((1 << (DIELParser.DATETIME - 81)) | (1 << (DIELParser.INT - 81)) | (1 << (DIELParser.TEXT - 81)))) !== 0)) ) {
			this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}

				this._errHandler.reportMatch(this);
				this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	@RuleVersion(0)
	public columnDefinition(): ColumnDefinitionContext {
		let _localctx: ColumnDefinitionContext = new ColumnDefinitionContext(this._ctx, this.state);
		this.enterRule(_localctx, 12, DIELParser.RULE_columnDefinition);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 147;
			_localctx._columnName = this.match(DIELParser.IDENTIFIER);
			this.state = 148;
			this.dataType();
			this.state = 152;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===DIELParser.UNIQUE || _la===DIELParser.PRIMARY || _la===DIELParser.NOT || _la===DIELParser.AUTOINCREMENT) {
				{
				{
				this.state = 149;
				this.columnConstraints();
				}
				}
				this.state = 154;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 172;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===DIELParser.DEFAULT) {
				{
				this.state = 155;
				this.match(DIELParser.DEFAULT);
				this.state = 170;
				this._errHandler.sync(this);
				switch (this._input.LA(1)) {
				case DIELParser.BOOLEANVAL:
				case DIELParser.NUMBER:
				case DIELParser.STRING:
					{
					this.state = 156;
					_localctx._singleValue = this.value();
					}
					break;
				case DIELParser.IDENTIFIER:
					{
					this.state = 157;
					_localctx._function = this.match(DIELParser.IDENTIFIER);
					this.state = 158;
					this.match(DIELParser.T__0);
					this.state = 167;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
					if (_la===DIELParser.BOOLEANVAL || _la===DIELParser.NUMBER || _la===DIELParser.STRING) {
						{
						this.state = 159;
						this.value();
						this.state = 164;
						this._errHandler.sync(this);
						_la = this._input.LA(1);
						while (_la===DIELParser.COMMA) {
							{
							{
							this.state = 160;
							this.match(DIELParser.COMMA);
							this.state = 161;
							this.value();
							}
							}
							this.state = 166;
							this._errHandler.sync(this);
							_la = this._input.LA(1);
						}
						}
					}

					this.state = 169;
					this.match(DIELParser.T__1);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
			}
